--- a/style.css
+++ b/style.css
@@ -553,10 +553,7 @@ transform: translate(-60%,-50%);
     font-family: 'Raleway', sans-serif;
     line-height: 1.4;
     color: #ccc;
-   background: #232526;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+   background-color:#130d19;
     height: 100vh;
     overflow-x: hidden;
     width: 100%;
