--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@ transform: translate(-60%,-50%);
     font-family: 'Raleway', sans-serif;
     line-height: 1.4;
     color: #ccc;
-   background-color:#130d19;
+   background-color:#34495e;
     height: 100vh;
     overflow-x: hidden;
     width: 100%;
