--- a/style.css
+++ b/style.css
@@ -553,7 +553,8 @@ transform: translate(-60%,-50%);
     font-family: 'Raleway', sans-serif;
     line-height: 1.4;
     color: #ccc;
-   background-color:#34495e;
+   background-color: #000000;
+background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
     height: 100vh;
     overflow-x: hidden;
     width: 100%;
