--- a/style.css
+++ b/style.css
@@ -344,7 +344,8 @@ transform: translate(-60%,-50%);
     content: '';
     height: 1rem;
     width: 1rem;
-    background-color:#2c3e50;
+    background-color:#ccc;
+    opacity:0.5;
     border-radius: .8rem;
     bottom: 1.4rem;
     left: -2%;
