--- a/style.css
+++ b/style.css
@@ -344,14 +344,13 @@ transform: translate(-60%,-50%);
     content: '';
     height: 1rem;
     width: 1rem;
-    background-color:#ccc;
-    opacity:0.5;
+    background-color:#00416a;
+    opacity:0.9;
     border-radius: .8rem;
     bottom: 1.4rem;
     left: -2%;
     transform: translateX(-50%);
     position: absolute;
-    opacity: 0.9;
     
   }
   .jobs .date{
@@ -725,7 +724,7 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
     content: '';
     height: 1rem;
     width: 1rem;
-    background-color: #00416a;
+    background-color:#333;
     border-radius: .8rem;
     bottom: 1.4rem;
     left: -5%;
