--- a/style.css
+++ b/style.css
@@ -724,7 +724,7 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
     content: '';
     height: 1rem;
     width: 1rem;
-    background-color:#333;
+    background-color:black;
     border-radius: .8rem;
     bottom: 1.4rem;
     left: -5%;
