--- a/style.css
+++ b/style.css
@@ -91,12 +91,14 @@ transform: translate(-80%,-56%);
 
 
 
+
+
 .about-me{
-    height: 100vh;
+    height: 70vh;
     width: 100%;
     
     margin-top: 120px;
-   
+   position: relative;
 }
 .about-img img{
     height: 400px;
@@ -107,9 +109,12 @@ transform: translate(-80%,-56%);
 }
 
 .content{
-    right: 20%;
-    position: absolute;
-    top: 30%;
+      left: 30%; 
+     position: absolute;
+    top: -150%; 
+    /* transform: translate(-50%,-50%);  */
+    margin: 0 auto;
+
 }
 
 .content p{
@@ -118,6 +123,8 @@ transform: translate(-80%,-56%);
     font-family: 'Raleway';
     color: #ccc;
     overflow: hidden;
+    font-size: larger;
+    letter-spacing: 1px;
   }
   .content h1{
     text-align: center;
@@ -125,9 +132,10 @@ transform: translate(-80%,-56%);
     color: #ccc;
     opacity:0.4 ;
     font-size: 4em;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     overflow: hidden;
     margin: 0 auto;
+    padding-bottom: 30px;
   }
 
 
@@ -379,7 +387,7 @@ transform: translate(-80%,-56%);
 
 
                                /*Contact starts here  */
- .contact{
+/* .contact{
      width: 100%;
      display: flex;
      min-height: 500px;
@@ -446,6 +454,7 @@ transform: translate(-80%,-56%);
     color:#25a0b1 ;
     
   }
+   */
   
   .copyright{
     width: 100%;
