--- a/style.css
+++ b/style.css
@@ -94,27 +94,21 @@ transform: translate(-80%,-56%);
 
 
 .about-me{
-    height: 70vh;
+   height:100vh ; 
     width: 100%;
-    
+   text-align: center;
     margin-top: 120px;
-   position: relative;
+  
 }
-.about-img img{
-    height: 400px;
-    border-radius: 2px;
-    
-    top: -20%;
-    transform: translateY(20%);
-}
+
 
 .content{
-      left: 30%; 
+      /* left: 10%; 
      position: absolute;
-    top: -150%; 
+    top: -150%;  */
     /* transform: translate(-50%,-50%);  */
-    margin: 0 auto;
-
+    /* margin: 0 auto; */
+    display: inline-block;
 }
 
 .content p{
@@ -140,9 +134,10 @@ transform: translate(-80%,-56%);
 
 
   .social-media{
-    position: absolute;
+    /* position: absolute;
     top: 100%;
-    right: 40%;
+    right: 40%; */
+    margin: 0 auto;
     
 
 }
@@ -162,7 +157,7 @@ transform: translate(-80%,-56%);
     transition: 0.5s ease;
 }
 .fa-facebook-square:hover,
-.fa-linkedin:hover
+.fa-linkedin:hover,
 .fa-instagram-square:hover{
     color: #3b5998;
     opacity: 1;
@@ -187,10 +182,9 @@ transform: translate(-80%,-56%);
 
 
 .services{
-    margin-top: 120px;
-    height: 80vh;
-    margin-bottom: 50px;
-    
+    margin: 50px auto;
+    height: 100vh;
+    position: relative;
 }
 
 
@@ -199,7 +193,7 @@ transform: translate(-80%,-56%);
     justify-content: center;
     text-align: center;
     margin-top: 50px;
-    margin-bottom: 70px;
+    margin-bottom: 100px;
     color: #ccc;
     opacity: 0.7;
   }
@@ -215,7 +209,7 @@ transform: translate(-80%,-56%);
     position: relative;
     margin-bottom: 60px;
   }
-  .section-header h6::after{
+  .section-header h1::after{
     content: '';
     height: 3px;
     width: 6rem;
@@ -229,7 +223,7 @@ transform: translate(-80%,-56%);
     
   }
  
-  .section-header h6::before{
+  .section-header h1::before{
     content: '';
     height: 1rem;
     width: 1rem;
@@ -242,16 +236,52 @@ transform: translate(-80%,-56%);
     opacity: 0.9;
     
   }
-
-
-  .icon-container img{
-      align-items: center;
-      height: 50px;
-      position: absolute;
-      left: 40%;
-      top:-40%;
-      margin-bottom: 20px;
+.service{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+  .container{
+    margin: 0 auto;
+    display: flex;
+  flex-wrap: wrap;
+    
   }
+  .service-content{
+    font-family: 'Roboto',sans-serif;
+    font-size: 6px;
+    display: flex;
+  }
+  
+  .service-box{
+    background-color: #333945;
+    filter: drop-shadow(0px 2px 2px #2c536459);
+    color: #ccc;
+    height: 160px;
+    width: 20vw ;
+    padding: 20px;
+    margin: 5px;
+    text-align: center;
+    position: relative;
+
+  }
+  
+  .service-box h3{
+    font-size: 16px;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%,-60%);
+  }
+  
+  .icon-box{
+    height: 100px;
+    font-size: 25px;
+    color: #f7f7f7;
+  }
+
+
 
                                  /* Experience part start */
 
@@ -264,7 +294,7 @@ transform: translate(-80%,-56%);
 
 
 .experience{
-    margin-top: 100px;
+    margin-top: 50px;
 
     height: 100vh;
     width: 100%;
@@ -555,29 +585,11 @@ transform: translate(-80%,-56%);
 
 
 
+
                                  /* Media queries */
 
 
 @media only screen and (max-width: 768px){
-    body{
-    font-family: 'Raleway', sans-serif;
-    line-height: 1.4;
-    color: #ccc;
-   background-color: #000000;
-background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
-    height: 100vh;
-    overflow-x: hidden;
-    width: 100%;
-    background-attachment: fixed;
-}
-.header{
-    width: 100%;
-    display: flex;
-	min-height: 100vh;
-	justify-content: center;
-    align-items: center;
-    
-}
     .image{
         position: absolute;
         top: 50%;
@@ -602,12 +614,7 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
         .navbar-brand{
             font-size: 14px;
         }
-        .about-me{
-    height: 100vh;
-    width: 100%;
-    margin-top: 120px;
-   
-}
+        
         .about-img img{
             height: 200px;
             border-radius: 2px;
@@ -616,45 +623,80 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
             left: 20%;
             top: 22%;
         }
-        .content{
-            
+        /* .content{
             left: 25%;
             position: absolute;
             top: 40%;
-        }
+        } */
         .content h1{
           margin:30px auto;
-        
+          
         }
         .content p{
-            position: absolute;
-            left: -20%;
+            /* position: absolute;
+            left: -20%; */
             font-size: large;
+            text-align: center;
+            display: inline-block !important;
         }
         .social-media{
-            position: absolute;
-            top: 310%;
+             /* position: absolute;
+            top: 400%;
             right: 40%;
-            margin-bottom:20px;
+            margin-bottom: 20px;
+
+            margin: 0 auto;  */
+
+            display: none;
         
         }
 
-        .icon-container img {
-            align-items: center;
-            height: 50px;
-            position: absolute;
-            left: 40%;
-            top: -45%;
-            margin-bottom: 70px;
-
-            
-}
 
 
 .services{
     margin-top: 120px;
     height: 100vh;
    
+}
+
+.container{
+  margin: 0 auto;
+}
+.service-content{
+  font-family: 'Roboto',sans-serif;
+  font-size: 6px;
+}
+
+.service-box{
+  background-color: #2c3e50;
+  filter: drop-shadow(2px 2px 2px rgba(0,0,0,.3));
+  color: #ccc;
+  
+}
+
+.service-box h3{
+  font-size: 13px;
+}
+.service-box {
+  background-color: #333945;
+  filter: drop-shadow(0px 2px 2px #2c536459);
+  color: #ccc;
+  height: 150px;
+  width: 23.5vw;
+  padding: 10px;
+  margin: 2px;
+  text-align: center;
+  position: relative;
+}
+/* .icon-container img {
+  align-items: center;
+  height: 50px;
+  position: absolute;
+  left: 40%;
+  top: -45%;
+  margin-bottom: 70px;
+  
+  
 }
 
 .skill h1{
@@ -698,12 +740,16 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
     background-color: #ccc;
     opacity: .5;
     z-index: 10000;
-}
+} */
 .experience{
-    margin-top: 200px;
-    height: 100vh;
-    width: 100%;
-    position: relative;
+  margin-top: 200px;
+}
+
+.section-heading {
+  position: relative;
+  top: 20%;
+  left: 50%;
+  transform: translate(-20%,-65%);
 }
 .jobs::before{
    display: none;
@@ -736,7 +782,7 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
     content: '';
     height: 1rem;
     width: 1rem;
-    background-color:#ccc;
+    background-color: #00416a;
     border-radius: .8rem;
     bottom: 1.4rem;
     left: -5%;
@@ -773,9 +819,4 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
   right: 1%;
 }
 }
-
-
-
-
-
 
