--- a/style.css
+++ b/style.css
@@ -633,6 +633,7 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
         top: 80%;
         left: 60%;
         transform: translate(-80%,-60%);
+        font-size: medium;
         
         }
         .text-middle{
@@ -701,12 +702,6 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
   font-size: 6px;
 }
 
-.service-box{
-  background-color: #2c3e50;
-  filter: drop-shadow(2px 2px 2px rgba(0,0,0,.3));
-  color: #ccc;
-  
-}
 
 .service-box h3{
   font-size: 13px;
@@ -715,7 +710,7 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
   background-color: #333945;
   filter: drop-shadow(0px 2px 2px #2c536459);
   color: #ccc;
-  height: 150px;
+  height: 160px;
   width: 23.5vw;
   padding: 10px;
   margin: 2px;
