--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ transform: translate(-80%,-56%);
     margin: 5px;
     text-align: center;
     position: relative;
-
+    cursor:pointer;
   }
   
   .service-box h3{
@@ -389,10 +389,11 @@ transform: translate(-80%,-56%);
     content: '';
     position: absolute;
     left: -2%;
-    top: -3%;
-    height: 140px;
+    top: -4%;
+    height: 110px;
     width: 360px;
     background-color: black;
+    padding-top:10px;
     z-index:-1;
     opacity: 1;
     filter: drop-shadow(0px 50px 50px rgba(0, 0, 0, 0.363));
@@ -402,16 +403,17 @@ transform: translate(-80%,-56%);
     content: '';
     height: 1rem;
     width: 1rem;
-    background-color:#00416a;
+    background-color:#3292ce;
     opacity:0.9;
     border-radius: .8rem;
     bottom: 1.4rem;
-    left: -2%;
+    left: -1.5%;
     transform: translateX(-50%);
     position: absolute;
     
   }
   .jobs .date{
+    padding-left:10px;
     margin-left: 10px;
     margin-bottom: 10px;
     position: relative;
@@ -706,9 +708,9 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
 }
 
 .service-box {
-  background-color: #333945;
+  background-color: #2c5364c2;
   filter: drop-shadow(0px 2px 2px #2c536459);
-  color: #ccc;
+  color: rgba(180, 179, 179, 0.836);
   height: 150px;
   width: 23.5vw;
   padding: 10px;
@@ -758,10 +760,10 @@ background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
     content: '';
     height: 1rem;
     width: 1rem;
-    background-color: #00416a;
+    background-color:#3292ce;
     border-radius: .8rem;
     bottom: 1.4rem;
-    left: -5%;
+    left: -1.5%;
     transform: translateX(-50%);
     position: absolute;
     opacity: 0.9;
