--- a/style.css
+++ b/style.css
@@ -616,8 +616,8 @@ font-size:23px;
     font-family: 'Raleway', sans-serif;
     line-height: 1.4;
     color: #ccc;
-   background-color: #000000;
-background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
+   background: url(bg.jpg) no-repeat center;
+    background-size: cover;
     height: 100vh;
     overflow-x: hidden;
     width: 100%;
