--- a/style.css
+++ b/style.css
@@ -616,7 +616,7 @@ font-size:23px;
     font-family: 'Raleway', sans-serif;
     line-height: 1.4;
     color: #ccc;
-   background: url(bg.jpg) no-repeat center;
+   background: url(new.jpg) no-repeat center;
     background-size: cover;
     height: 100vh;
     overflow-x: hidden;
