--- a/style.css
+++ b/style.css
@@ -622,13 +622,18 @@ font-size:23px;
     width: 100%;
     background-attachment: fixed;
 }
+
+
+.header{
+  min-height:80vh;
+}
     .image{
         position: absolute;
-        top: 50%;
+        top: 40%;
         margin-bottom: auto;
         border-radius: 100%;
     
-        height: 100px;
+        height: 190px;
     }
     .text-middle{
         position: absolute;
@@ -690,7 +695,7 @@ font-size:23px;
 
 .services{
     margin-top: 120px;
-    height: 100vh;
+    height: 70vh;
    
 }
 
